--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,13 +1,4 @@
-/* ====================================
-// css variables
-// ==================================== */
-
-:root {
-}
-
-/* ====================================
-// reset rules
-// ==================================== */
+@import "bootstrap/scss/bootstrap-grid";
 
 * {
   box-sizing: border-box;
