--- a/src/scss/modules/_intro.scss
+++ b/src/scss/modules/_intro.scss
@@ -1,6 +1,15 @@
 .intro {
   background-color: #f7ffc4;
+  max-width: 100%;
 }
 .intro-img {
   padding-left: 50%;
+  max-width: 100%;
+  height: auto;
+}
+.intro-text {
+  padding: 0px 68px 97px 9px;
+}
+.title-left {
+  padding: 99px 68px 0px 9px;
 }
