--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -4,7 +4,11 @@ nav {
   padding: 25px;
 }
 .ancre {
-  margin: 50px 30px;
   text-decoration: none;
   font-family: Helvetica;
+}
+.logo {
+  width: 20%;
+
+  margin-right: 36px;
 }
