--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -1,14 +1,15 @@
 nav {
   background-color: #fec5cc;
   font-size: 22px;
-  padding: 25px;
+  padding-top: 26px;
+  padding-bottom: 19px;
+  padding-left: 17px;
 }
 .ancre {
   text-decoration: none;
   font-family: Helvetica;
 }
 .logo {
-  width: 20%;
-
-  margin-right: 36px;
+  max-width: 30%;
+  height: 100px;
 }
