--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,3 +2,7 @@
 @import "layout";
 @import "modules/nav";
 @import "modules/intro";
+@import "modules/selection";
+@import "modules/intro";
+@import "modules/intro";
+@import "modules/intro";
