--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -44,7 +44,14 @@ h3 {
   color: #000000;
   letter-spacing: 0;
 }
-
+button {
+  background-color: #fec5cc;
+  border-radius: 15px;
+  padding: 15px 45px;
+  font-family: Helvetica-Bold;
+  font-size: 20px;
+  border: none;
+}
 /* ====================================
 // base rules
 // ==================================== */
