--- a/src/scss/modules/_selection.scss
+++ b/src/scss/modules/_selection.scss
@@ -3,11 +3,7 @@
   padding: 31px;
 }
 .button-select {
-  background-color: #fec5cc;
-  border-radius: 15px;
-  padding: 15px 45px;
-  font-family: Helvetica-Bold;
-  font-size: 20px;
+  margin: 12px;
 }
 .product-table1 {
   background-color: #e4c5ff;
@@ -40,4 +36,10 @@ h4 {
 .img-select {
   max-width: 100;
   margin: 28px 38px;
+}
+.more-drink {
+  background-color: #d9ffc4;
+}
+.img-alter {
+  max-width: 100px;
 }
