le html presque finit

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,6 @@
 @import "modules/nav";
 @import "modules/intro";
 @import "modules/selection";
-@import "modules/intro";
-@import "modules/intro";
-@import "modules/intro";
+@import "modules/recipe";
+@import "modules/find";
+@import "modules/footer";
