--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -21,6 +21,7 @@ body {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 p {
@@ -37,6 +38,7 @@ h2 {
   font-size: 46px;
   color: #000000;
   letter-spacing: 0;
+  padding-left: 28px;
 }
 h3 {
   font-family: Helvetica-Bold;
@@ -51,6 +53,9 @@ button {
   font-family: Helvetica-Bold;
   font-size: 20px;
   border: none;
+}
+img {
+  max-width: 100%;
 }
 /* ====================================
 // base rules
