correction pour responsive

--- a/src/scss/modules/_find.scss
+++ b/src/scss/modules/_find.scss
@@ -2,8 +2,11 @@
   background-color: #d0fe94;
 }
 .find_title {
-  color: white;
+  color: black;
+
+  left: 50%;
+  top: 50%;
 }
 .find_country {
-  color: white;
+  color: black;
 }
