--- a/src/scss/modules/_find.scss
+++ b/src/scss/modules/_find.scss
@@ -2,11 +2,17 @@
   background-color: #d0fe94;
 }
 .find_title {
-  color: black;
-
-  left: 50%;
-  top: 50%;
+  color: white;
+  position: absolute;
+  left: 41%;
+  top: 43%;
 }
 .find_country {
-  color: black;
+  color: white;
+  position: absolute;
+  left: 41%;
+  top: 49%;
+}
+.shopalter {
+  position: absolute;
 }
