--- a/src/scss/modules/_find.scss
+++ b/src/scss/modules/_find.scss
@@ -16,3 +16,14 @@
 .shopalter {
   position: absolute;
 }
+.btn-findus {
+  background-color: #fec5cc;
+  border-radius: 15px;
+  padding: 15px 45px;
+  font-family: Helvetica-Bold;
+  font-size: 20px;
+  border: none;
+  position: absolute;
+  left: 39%;
+  top: 55%;
+}
