html finit du produit

--- a/src/scss/modules/select-product.scss
+++ b/src/scss/modules/select-product.scss
@@ -3,10 +3,14 @@
 }
 .tonic-img {
   height: 5%;
-  width: 5%;
+  width: 10%;
   position: relative;
 }
 .tonic-img-first {
   height: 25%;
   width: 25%;
+}
+.bio {
+  height: 5%;
+  width: 5%;
 }
