les couleurs css

--- a/src/scss/modules/select-product.scss
+++ b/src/scss/modules/select-product.scss
@@ -14,3 +14,11 @@
   height: 5%;
   width: 5%;
 }
+.button-select {
+  background-color: #fec5cc;
+  border-radius: 15px;
+  padding: 15px 35%;
+  font-family: Helvetica-Bold;
+  font-size: 20px;
+  border: none;
+}
