--- a/src/scss/modules/more-product.scss
+++ b/src/scss/modules/more-product.scss
@@ -1,3 +1,18 @@
 .more-select {
   background-color: #d9ffc4;
 }
+.shortcut {
+  text-align: center;
+}
+.shortcut-title {
+  text-align: center;
+  margin-top: 50px;
+}
+.shortcut-btn {
+  background-color: #fec5cc;
+  border-radius: 15px;
+  padding: 15px 45px;
+  font-family: Helvetica-Bold;
+  font-size: 20px;
+  border: none;
+}
