--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -57,6 +57,27 @@ button {
 img {
   max-width: 100%;
 }
+@media only screen and (max-width: 776px) {
+  h2 {
+    font-family: Helvetica-Bold;
+    font-size: 24px;
+    color: #000000;
+    letter-spacing: 0;
+    padding-left: 28px;
+  }
+  .logo {
+    width: 30%;
+    height: auto;
+  }
+}
+@media only screen and (min-width: 769px) {
+  .logo {
+    width: 10%;
+    position: relative;
+    right: 20%;
+    height: auto;
+  }
+}
 /* ====================================
 // base rules
 // ==================================== */
