--- a/src/scss/modules/_selection.scss
+++ b/src/scss/modules/_selection.scss
@@ -15,7 +15,9 @@
 }
 .price-table {
   background-color: #c5f7fe;
+  padding-bottom: 50px;
 }
+
 .price {
   font-family: Helvetica-Bold;
   font-size: 13px;
@@ -61,9 +63,16 @@ h4 {
 @media only screen and (min-width: 769px) {
   .product-table1,
   .product-table2,
-  .product-table3,
-  .img-alter {
+  .product-table3 {
     width: 25%;
+    float: left;
+    margin: 53px 40px;
+  }
+  .img-alter {
+    position: relative;
+    bottom: 20px;
+    left: -25%;
+    width: 45%;
     float: left;
     margin: 53px 40px;
   }
@@ -71,7 +80,7 @@ h4 {
     position: absolute;
     left: 50%;
     right: 0%;
-    top: 183%;
+    top: 180%;
     font-size: 26px;
   }
   .button-select {
@@ -82,6 +91,24 @@ h4 {
     font-family: Helvetica-Bold;
     font-size: 20px;
     border: none;
+    position: relative;
+    top: 25px;
+    left: 10px;
+  }
+
+  .btn-moredrink {
+    background-color: #ffc5ff;
+    padding: 15px 122px;
+    background: #fec5cc;
+    border-radius: 15px;
+    position: absolute;
+    top: 190%;
+    left: 50%;
+  }
+  .shop-now {
+    position: relative;
+    left: 50%;
+    top: 100px;
   }
 }
 
@@ -98,13 +125,32 @@ h4 {
   }
   .alter-texte {
     position: absolute;
-    left: 50%;
+    left: 10%;
     right: 0%;
-    top: 183%;
+    top: 305%;
     font-size: 16px;
   }
   .button-select {
     margin: 12px;
     padding: 10px 30% 10px 40%;
+  }
+  .button-select {
+    position: relative;
+    top: 25px;
+    right: 3px;
+  }
+  .btn-moredrink {
+    background-color: #ffc5ff;
+    padding: 7px 50px;
+    background: #fec5cc;
+    border-radius: 15px;
+    position: absolute;
+    top: 313%;
+    left: 65%;
+  }
+  .shop-now {
+    position: relative;
+    left: 15%;
+    bottom: 90px;
   }
 }
