--- a/src/scss/modules/select-product.scss
+++ b/src/scss/modules/select-product.scss
@@ -1,15 +1,7 @@
 .tonic-page {
   background-color: #c5e3ff;
 }
-.tonic-img {
-  height: 5%;
-  width: 10%;
-  position: relative;
-}
-.tonic-img-first {
-  height: 25%;
-  width: 25%;
-}
+
 .bio {
   height: 5%;
   width: 5%;
@@ -21,4 +13,49 @@
   font-family: Helvetica-Bold;
   font-size: 20px;
   border: none;
+}
+
+@media only screen and (min-width: 769px) {
+  .tonic-img-first {
+    height: 35%;
+    width: 40%;
+    margin: 140px 0 0 50px;
+  }
+  h5 {
+    font-family: Helvetica-Bold;
+    font-size: 91px;
+    color: black;
+    letter-spacing: 0;
+  }
+  .tonic-img {
+    height: 5%;
+    width: 15%;
+    position: relative;
+    width: 10vw;
+    height: 20vh;
+    margin: 0 0 0 50px;
+    left: 0px;
+  }
+}
+
+@media only screen and (max-width: 776px) {
+  .tonic-img-first {
+    height: 55%;
+    width: 75%;
+    margin: 140px 0 0 50px;
+  }
+  h5 {
+    font-family: Helvetica-Bold;
+    font-size: 30px;
+    color: black;
+    letter-spacing: 0;
+  }
+  .tonic-img {
+    height: 5%;
+    width: 15%;
+    position: relative;
+    width: 19vw;
+    height: 13vh;
+    margin: 0 0 0 50px;
+  }
 }
