--- a/src/scss/modules/_recipe.scss
+++ b/src/scss/modules/_recipe.scss
@@ -9,27 +9,18 @@
   float: right;
 }
 
-.recipe_table {
-  border: 1px ridge black;
-}
-.commitment_img {
-  max-width: 50%;
-}
-.commitment {
-  background-color: #f7ffc4;
-}
 @media only screen and (min-width: 769px) {
   .recipe_img {
     max-width: 30%;
     position: relative;
-    bottom: 60px;
+    bottom: 2px;
   }
   .recipeleft_img {
     max-width: 30%;
     float: right;
     position: relative;
     left: 70%;
-    bottom: 60px;
+    bottom: 30px;
   }
 
   .recipe_title {
@@ -37,6 +28,7 @@
     font-size: 46px;
     position: relative;
     left: 65%;
+    top: 30px;
   }
   .recipe-text {
     font-size: 21px;
@@ -47,17 +39,36 @@
   .recipe_title_side {
     position: relative;
     right: 55%;
+    top: 45px;
   }
   .recipe-text-side {
     position: relative;
     right: 50%;
-    top: 30px;
+    top: 50px;
   }
 
   .btn-recipe-side {
     position: relative;
     right: 50%;
-    top: 30px;
+    top: 100px;
+    background-color: #fec5cc;
+    border-radius: 15px;
+    padding: 15px 45px;
+    font-family: Helvetica-Bold;
+    font-size: 20px;
+    border: none;
+  }
+  .btn-recipe {
+    position: relative;
+    left: 70%;
+    top: 90px;
+
+    background-color: #fec5cc;
+    border-radius: 15px;
+    padding: 15px 45px;
+    font-family: Helvetica-Bold;
+    font-size: 20px;
+    border: none;
   }
 }
 
@@ -93,5 +104,27 @@
     right: 60%;
     top: 5px;
     margin: 0 0 10px 0;
+  }
+  .btn-recipe-side {
+    position: relative;
+    right: 60%;
+    top: 10px;
+    background-color: #fec5cc;
+    border-radius: 15px;
+    padding: 5px 20px;
+    font-family: Helvetica-Bold;
+    font-size: 10px;
+    border: none;
+  }
+  .btn-recipe {
+    position: relative;
+    left: 45%;
+    top: 30px;
+    background-color: #fec5cc;
+    border-radius: 15px;
+    padding: 5px 20px;
+    font-family: Helvetica-Bold;
+    font-size: 10px;
+    border: none;
   }
 }
