--- a/src/scss/modules/_selection.scss
+++ b/src/scss/modules/_selection.scss
@@ -108,7 +108,10 @@ h4 {
   .shop-now {
     position: relative;
     left: 50%;
-    top: 100px;
+    top: 70px;
+  }
+  .img-alter-mobil {
+    width: 0;
   }
 }
 
@@ -127,7 +130,7 @@ h4 {
     position: absolute;
     left: 10%;
     right: 0%;
-    top: 305%;
+    top: 325%;
     font-size: 16px;
   }
   .button-select {
@@ -136,7 +139,7 @@ h4 {
   }
   .button-select {
     position: relative;
-    top: 25px;
+    top: 29px;
     right: 3px;
   }
   .btn-moredrink {
@@ -145,12 +148,17 @@ h4 {
     background: #fec5cc;
     border-radius: 15px;
     position: absolute;
-    top: 313%;
+    top: 333%;
     left: 65%;
   }
   .shop-now {
     position: relative;
     left: 15%;
     bottom: 90px;
+  }
+  .img-alter-mobil {
+    position: relative;
+    bottom: 60px;
+    left: 60px;
   }
 }
